tests/invalid/tooclosed.brandejs
x = 5
;missing end code block "}", should throw an error
if(x==5){
    y = 1
}
}